--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@angular/platform-browser-dynamic": "~12.1.1",
     "@angular/router": "~12.1.1",
     "@fortawesome/fontawesome-free": "^5.15.4",
-    "bootstrap": "^5.0.0-beta3",
+    "bootstrap": "5.0.0-beta3",
+    "ngx-mask": "12.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
