--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@angular/platform-browser-dynamic": "~12.1.1",
     "@angular/router": "~12.1.1",
     "@fortawesome/fontawesome-free": "^5.15.4",
+    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "bootstrap": "5.0.0-beta3",
+    "jquery": "^3.6.0",
     "ngx-mask": "12.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
